Update models
Add entities
Add Getter/Setter with Lombok annotations
Fix problem to load FXML in Main