@@ -1,3 +1,11 @@
 # Space Invaders
 
 JavaFX game project
+
+## Run project with IntelliJ
+
+Install JavaFX Runtime (12)
+https://openjfx.io/openjfx-docs/#install-javafx
+
+Main > Edit Configurations...
+VM options: --module-path /usr/lib/jvm/javafx-sdk-12.0.1/lib/ --add-modules javafx.controls,javafx.fxml
